Fixed z-index issue on divider steps. Fixed toggle accordion panel

--- a/src/assets/scss/shared/_dividers.scss
+++ b/src/assets/scss/shared/_dividers.scss
@@ -3,6 +3,7 @@
 // =============================================================================
 
 .divider--steps {
+	@include clearfix;
 	@include svg-bg-divider-repeater($primary-color-encoded);
 	@include margin(20px auto 0 auto);
 	width: 6px;
@@ -10,12 +11,9 @@
 	background-repeat: repeat-y;
 	& + .grid-row {
 		margin-top: 0;
-		position: relative;
-		z-index: 1;
 	}
 	@include medium-and-up {
 		@include svg-bg-steps-divider-desktop($primary-color-encoded);
-		@include margin(0 auto);
 		width: 70%;
 		height: 110px;
 		background-repeat: no-repeat;
@@ -24,4 +22,8 @@
 			filter: FlipH;
 		}
 	}
+}
+
+.grid-row {
+	@include clearfix;
 }
