--- a/src/assets/scss/shared/_images.scss
+++ b/src/assets/scss/shared/_images.scss
@@ -2,6 +2,9 @@
 //	IMAGES
 // =============================================================================
 
+img {
+	display: block;
+}
 .img {
 	&--resp {
 		max-width: 100%;
